2010-11-23  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16533: Codemirror contains MacOS meta files (Thanks to Bjoern Pedersen)
	* Fixed bug #16532: Field pages.shortcut uses hardcoded form label

2010-11-23  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #16495: conf.php files aren't corrected when installing extensions

2010-11-23  Steffen Ritter  <typo3@steffen-ritter.net>

	* Fixed bug #16518: Extra frame after default password change, link from reports module (Thanks to Kevin Walter)
	* Fixed bug #16517: t3lib_beFunc::getRecordWSOL() does not use it's param $useDeleteClause in else branch

2010-11-22  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #16322: Incorrect regexp in substituteMarkerArray
	* Fixed bug #16495: conf.php files aren't corrected when installing extensions
	* Fixed bug #14974: Extra frame after default password change, link from welcome screen (Thanks to Kevin Walter)

2010-11-22  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #16507: stdWrap unavailable after refactoring of tslib_content

2010-11-22  Steffen Ritter  <typo3@steffen-ritter.net>

	* Fixed bug #16513: Class hint "mixed" always results to fatal error in t3lib_tree_Tca_DatabaseNode

2010-11-20  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #16486: BE livesearch results in errors when DBAL is installed
	* Fixed bug #16467: Missing array check in tt_content (Thanks to Bjoern Pedersen)

2010-11-20  Steffen Ritter  <typo3@steffen-ritter.net>

	* Added feature #15080: TYPO3 misses SpriterManager_handler using sprite-generation

2010-11-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #16431: htmlArea RTE: in WebKit, clicking on image does not select it

2010-11-18  Rupert Germann  <rupi@gmx.li>

	* Follow-up to bug #7942: "Next" buttons where missing in update wizard.

2010-11-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16343: htmlArea RTE: JS-Error when closing "Insert Picture" dialogue

2010-11-18  Ernesto Baschny  <ernesto@typo3.org>
