@@ -2,6 +2,7 @@
 
 	* Fixed bug #16533: Codemirror contains MacOS meta files (Thanks to Bjoern Pedersen)
 	* Fixed bug #16532: Field pages.shortcut uses hardcoded form label
+	* Fixed bug #16531: $TCA for stddb/tbl_pages.php does not use class constants for pages.doktype
 
 2010-11-23  Steffen Kamper  <steffen@typo3.org>
 
